# egrapsa

./: .gitignore  Cargo.toml  README.md  TODO  cicero.json  example_config.json  example_config_2.json  phalaris.json
configs/: cicero.json  example_config.json  example_config_2.json  homer.json  lucian-4.json  lucian-5.json  lucian-6.json  phalaris.json
src/: config.rs  lib.rs  main.rs  text.rs
src/formatters/: latex.rs  mod.rs
src/text_sources/: gutenberg.rs  gutenberg_de.rs  mod.rs  scaife.rs  thelatinlibrary.rs
