[package]
name = "egrapsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive", "unicode"] }
thiserror = "1.0.58"
ureq = "2.9.6"
quick-xml = "0.31.0"
itertools = "0.13.0"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
regex = "1.11.0"
